# capaStudy

./: .env  .gitignore  2026.02.09-爬取结果校核.xlsx  2026.02.25-欧地航线E&ATA与脱班时间统计.xlsx  MSC Tiger航线挂靠情况查询.xlsx  PORT_TRADE.xlsx  PORT_TRADE_filled.xlsx  PROJECT_STRUCTURE.md  data.xlsx  demo_v3.py  ezocean_table.csv  ezocean_table.xlsx  ezocean_table_260210 1121.xlsx  ezocean_table_260210 1257.xlsx  ezocean_table_260210 1343.xlsx  ezocean_table_260210 1451.xlsx  ezocean_table_260210 1741.xlsx  ezocean_table_260210 1745.xlsx  ezocean_table_260210 1748.xlsx  ezocean_table_260210 1945.xlsx  ezocean_table_260210 1950.xlsx  ezocean_table_260210 2012.xlsx  ezocean_table_NEU(20260210-20260322)_260211 0033.xlsx  ezocean_table_new.csv  ezocean_table_new.xlsx  ezocean_table_scraper.py  ezocean_table_v1.xlsx  merge_all_carriers.py  pyproject.toml  run_full_pipeline.bat  run_full_pipeline.sh  run_pipeline.py  streamlit_app.py  sync_to_rds.py  地线数据0210-0322.xlsx  地线运力调研结果_260210-260322.xlsx  地线运力调研结果_260210-260322v2.xlsx  欧地航线E&ATA与脱班时间统计.xlsx
2026.02.06-EzOcean准确性评估/: EZOceanResult.xlsx  EZOceanResult_detail_parsed.xlsx
CSL FETCH/: CSL_FETCH.py  CSL_FETCH_AEU1_Qingdao_260228143901.xlsx  CSL_FETCH_AEU1_Qingdao_260228152235.xlsx  CSL_FETCH_AEU1_Qingdao_260228152449.xlsx  CSL_FETCH_AEU1_Qingdao_260228153457.xlsx  CSL_FETCH_AEU1_Qingdao_260228153759.xlsx  CSL_FETCH_AEU1_Qingdao_260228153909.xlsx  CSL_FETCH_AEU1_Qingdao_260228170611.xlsx  CSL_FETCH_AUTOMATION.py  CSL_FETCH_BACK_TEST.py  CSL_FETCH_REUSE_TEST.py  csl_response.json  csl_service_start_end.xlsx  import asyncio.py
vessels/: .env  (+32 more)
(+739 files in other folders)
